package com.noser.example.animals;

/**
 * Created by maechlerfa on 1/19/16.
 */
public interface Animal {
    String getName();
}
