package com.noser.example.watersources;

/**
 * Created by maechlerfa on 1/19/16.
 */
public class Fountain implements WaterSource {
    @Override
    public void use() {

    }

    @Override
    public boolean isEmpty() {
        return false;
    }
}
