package com.noser.example.watersources;

/**
 * Created by maechlerfa on 1/19/16.
 */
public interface WaterSource {
    void use();
    boolean isEmpty();
}
