@startuml

interface com.noser.example.watersources.WaterSource{
   use()
   isEmpty()
}

class Pool
class com.noser.example.watersources.Fountain

abstract class Animal {
   String name
   drink()
}

class Lion{
}

class Rhino{
}

class com.noser.example.Cage {
   com.noser.example.watersources.WaterSource water
   FoodSource food
   List<Animal> animals
   List<CageComponent> components
   addAnimal(Animal animal)
}


com.noser.example.watersources.WaterSource <|--- Pool
com.noser.example.watersources.WaterSource <|--- com.noser.example.watersources.Fountain
Animal <|--- Lion
Animal <|--- Rhino

com.noser.example.Cage *- Animal : contains
com.noser.example.Cage *- "1" com.noser.example.watersources.WaterSource : has

@enduml